--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,27 +1,17 @@
-name: Java CI
+name: Java CI             # Name of the workflow
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on:                       # When it runs
+  push:                   # Triggers on code push
+    branches: [ '**' ]    # All branches
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Environment
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@v3       # Pull the code
+      - uses: actions/setup-java@v3     # Set up Java
         with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Grant execute permission to Gradle wrapper
-        run: chmod +x gradlew
-
-      - name: Build with Gradle
-        run: ./gradlew build
+          distribution: 'zulu'
+          java-version: '21'
+      - run: ./gradlew build            # Run tests
