--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,4 +15,5 @@ jobs:
           distribution: 'zulu'
           java-version: '21'
       - run: ./gradlew build
-      - run: ./gradlew test --console=plain --info           # Run tests
+      - run: ./gradlew test --console=plain --debug --stacktrace
+        # Run tests
