--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,4 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '21'
-      - run: ./gradlew build
-      - run: ./gradlew test --console=plain --debug --stacktrace --scan
-        # Run tests
+      - run: ./gradlew test --console=plain --info  # Run tests
