--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,4 +15,4 @@ jobs:
           distribution: 'zulu'
           java-version: '21'
 
-      - run: ./gradlew test --console=plain --debug --stacktrace
+      - run: ./gradlew test --console=plain --info
