--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:                       # When it runs
     branches: [ '**' ]    # All branches
 
 jobs:
-  build:
+  run-tests:
     runs-on: ubuntu-latest  # Environment
 
     steps:
